--- a/src/styles/components/cube.scss
+++ b/src/styles/components/cube.scss
@@ -1,5 +1,7 @@
 .cube {
-    height: 8rem;
-    width: 8rem;
-    background-color: red;
+  height: 8rem;
+  width: 8rem;
+  background-color: red;
+
+  transform: rotate(360deg);
 }
